[kcms/mouse] Don't emit needsSaveChanged when adding device

When adding a device it won't have unsaved changes, so the needsSave
status won't change.

This fixes a use-after-move because dev is moved earlier in
"m_devices.push_back(std::move(dev));"

BUG: 495231

SENTRY: SYSTEMSETTINGS-4H3

SENTRY: FALLTHROUGH-6NV